src/app/(cloud)/cloud/[team-slug]/[project-slug]/(tabs)/(overview)/InfraOnline/index.module.scss
@use '@scss/common.scss' as *;

.deploymentWrapper {
  border: 1px solid var(--theme-border-color);

  p {
    margin: 0;
  }
}

.domains {
  display: flex;
  flex-direction: column;
  gap: var(--base);
  padding: calc(var(--base) * 2) calc(var(--base) * 1.5);
  border-right: 1px solid var(--theme-border-color);
  height: 100%;

  @include mid-break {
    padding: calc(var(--base) * 1.5) var(--base);
    border-right: 0px;
    border-bottom: 1px solid var(--theme-border-color);
  }

  h6 {
    margin: 0;
    text-transform: uppercase;
    letter-spacing: .25em;
    opacity: .5;
  }

  .domainLink {
    display: flex;
    align-items: center;
    text-decoration: none;
    @include body;
    margin: 0;
    width: max-content;
    gap: calc(var(--base) / 2);
    transition: opacity .3s cubic-bezier(.165, .84, .44, 1);

    &:first-of-type {
      @include h3;
      margin: 0;
      gap: var(--base);
    }

    svg {
      transition: transform .3s cubic-bezier(.165, .84, .44, 1);
    }

    &:hover {
      opacity: .8;

      svg {
        transform: translate(25%, -25%);
      }
    }
  }
}

.domainAndDetails {
  border-bottom: 1px solid var(--theme-border-color);
}

.deploymentDetails {
  padding: calc(var(--base) * 2) calc(var(--base) * 1.5);
  display: flex;
  flex-direction: column;
  gap: var(--base);
  height: 100%;

  @include mid-break {
    padding: calc(var(--base) * 1.5) var(--base);
  }

  h6 {
    margin: 0;
    text-transform: uppercase;
    letter-spacing: .25em;
    opacity: .5;
  }
}

.iconAndLabel {
  display: flex;
  align-items: center;
  gap: calc(var(--base) / 2);

  svg {
    width: var(--base);
    height: var(--base);
  }
}

.ellipseText {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.statusWrapper {
  position: relative;
}

.status, .reTrigger {
  display: flex;
  gap: .75rem;
  align-items: center;
  padding: calc(var(--base) * 1.5);

  @include mid-break {
    padding: calc(var(--base) * 1.5) var(--base);
  }
}

.status {
  @include h5;
  margin: 0;
  @include small-break {
    padding-bottom: 0;
  }
}

.reTriggerButton {
  appearance: none;
  border: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  cursor: pointer;
  @include small;
  text-decoration: underline;
  opacity: .75;

  &:hover {
    opacity: .5;
  }
}

